feat: implement client WIP(missing tests)
